# polygrammar

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  setup.cfg
polygrammar/: cli.py  execute.py  generate.py  model.py  optimizer.py  recursive_parser.py  runtime.py  runtime_model.py  test_optimizer.py  test_recursive_parser.py  transforms.py
polygrammar/grammars/: abnf.py  ebnf.py  escapes.py  lark.py  lisp.py  python_re_writer.py  test_abnf.py  test_ebnf.py  test_escapes.py  test_lark.py  test_lisp.py  test_python_re.py  to_python_re.py
