[project]
name = "polygrammar"
version = "0.1.0"
description = "Converter between grammar languages and parser"
authors = [
    {name = "Bruno Kim Medeiros Cesar",email = "brunokim.mc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "multimethod (>=2.0,<3.0)",
    "regex (>=2025.9.18,<2026.0.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "prettyprinter (>=0.18.0,<0.19.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
pytest = "^8.4.2"
pytest-cover = "^3.0.0"

